--- a/.gitignore
+++ b/.gitignore
@@ -5,23 +5,12 @@ __pycache
 .pyc
 *.log
 .py.log
-config\airflow.cfg
-# Airflow sensitive files
-airflow.cfg
+config
+config/airflow.cfg
 airflow-webserver.pid
+*.cfg
 *.key
 *.pem
 *.fernet
 secrets/
 .env
-.env*
-*.env
-airflow/fernet_key.txt
-airflow/secrets/*
-!airflow/secrets/.gitkeep
-airflow/logs/
-airflow/plugins/
-airflow/dags/__pycache__/
-airflow/dags/*.pyc
-airflow/airflow.db
-airflow/webserver_config.py
