--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
 aiohttp==3.11.13
-apache-airflow==3.0.1
+apache-airflow==3.0.2
 kafka_python==2.2.10
-pymongo==4.13.0
+matplotlib==3.10.3
+numpy==2.3.0
+optuna==4.3.0
+pandas==2.3.0
+pymongo==4.13.2
 python-dotenv==1.1.0
-Requests==2.32.3
+Requests==2.32.4
+scikit_learn==1.7.0
+seaborn==0.13.2
+streamlit==1.45.1
+torch==2.2.2
+tqdm==4.67.1
+transformers==4.50.3
