--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
-aiohttp==3.11.12
-apache-airflow==3.0.2
-kafka_python==2.2.10
+--extra-index-url https://download.pytorch.org/whl/cu118
+
+aiohttp
+apache-airflow==3.0.1
+kafka-python==2.0.2
 matplotlib==3.7.5
-numpy==2.3.0
+numpy==1.26.4
 optuna==4.0.0
 pandas==2.3.0
-pymongo==4.13.2
+pymongo==4.13.0
 python-dotenv==1.1.0
-Requests==2.32.4
+requests==2.32.3
 scikit_learn==1.7.0
 seaborn==0.13.2
 streamlit==1.45.1
-torch==2.6.0+cu118
 tqdm==4.67.1
 transformers==4.47.0
+torch==2.4.0+cu118
+torchvision==0.19.0+cu118
