--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 --extra-index-url https://download.pytorch.org/whl/cpu
 
-aiohttp
+aiohttp==3.12.13
 apache-airflow==3.0.1
 kafka-python==2.0.2
 matplotlib==3.7.5
@@ -10,10 +10,10 @@ pandas==2.3.0
 pymongo==4.13.0
 python-dotenv==1.1.0
 requests==2.32.3
-scikit_learn==1.7.0
+scikit-learn==1.7.0
 seaborn==0.13.2
 streamlit==1.45.1
 tqdm==4.67.1
 transformers==4.47.0
-torch==2.4.0+cpu
-torchvision==0.19.0+cpu
+torch==2.2.2+cpu
+torchvision==0.17.2+cpu
